Fixing bad linebreaks in fp
Possible that this does not solve it correctly and gives some other styling issues. Will test and fix if that is the case

--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -1016,6 +1016,9 @@ input[type=text]:focus.invalid {
             span, b {
                 text-transform: capitalize;
             }
+            @media (max-width: 1216px) {
+                width: 50%;
+            }
         }
         .align-right {
             text-align: right;
@@ -1074,6 +1077,10 @@ input[type=text]:focus.invalid {
                 &.showDetails {
                     display: block;
                 }
+            }
+            @media (max-width: 1216px) {
+                width: 50%;
+                float: right;
             }
 
             span {
